--- a/client/app/index.html
+++ b/client/app/index.html
@@ -1,15 +1,20 @@
 <!doctype html>
 <html ng-app>
   <head>
-    <title>Hello AngularJS</title>
+    <title>Show me the route</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>
-    <script src="hello.js"></script>
+    <script src="tracks.js"></script>
   </head>
 
   <body>
-    <div ng-controller="Hello">
-      <p>The ID is {{greeting.id}}</p>
-      <p>The content is {{greeting.content}}</p>
+    <div ng-controller="Tracks">
+      <p>Tracks</p>
+      <div ng-repeat="t in tracks">
+        {{t.id}}
+          <div ng-repeat="w in {{tracks.waypoints}}">
+            {{w.id}}
+          </div>
+      </div>
     </div>
   </body>
 </html>
